fixed layout bug in DB and History tables

--- a/css/admin_dash.css
+++ b/css/admin_dash.css
@@ -75,6 +75,10 @@ main {
     }
 }
 
+.dataTables_wrapper {
+    width: 100%;
+    overflow-x: auto;
+}
 
 footer {
     background-color: #f8f9fa; /* Light background color */
